--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>kafka</artifactId>
+    <artifactId>financial-data</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>kafka</name>
     <description>Demo project for Spring Boot</description>
