--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=sample-group
-spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=com.example.kafka.utils.DataDeserializer
+spring.kafka.consumer.enable-auto-commit=true
 
 
 spring.kafka.producer.bootstrap-servers=localhost:9092
